// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util calcCharacterStat chou_nu_er 1`] = `
Object {
  "blankTotal": 7,
  "details": Array [
    Object {
      "blank": true,
      "char": "
",
      "count": 7,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "，",
      "count": 4,
      "punctuation": true,
    },
    Object {
      "blank": false,
      "char": "。",
      "count": 4,
      "punctuation": true,
    },
    Object {
      "blank": false,
      "char": "愁",
      "count": 3,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "说",
      "count": 3,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "道",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "识",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "滋",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "味",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "爱",
      "count": 2,
      "punctuation": false,
    },
  ],
  "punctuationTotal": 12,
  "total": 76,
  "uniqueBlankTotal": 1,
  "uniquePunctuationTotal": 6,
  "uniqueTotal": 49,
}
`;

exports[`util calcCharacterStat chou_nu_er 2`] = `
Object {
  "blankTotal": 7,
  "details": Array [
    Object {
      "blank": false,
      "char": "愁",
      "count": 3,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "说",
      "count": 3,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "道",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "识",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "滋",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "味",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "爱",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "上",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "层",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "楼",
      "count": 2,
      "punctuation": false,
    },
  ],
  "punctuationTotal": 12,
  "total": 76,
  "uniqueBlankTotal": 1,
  "uniquePunctuationTotal": 6,
  "uniqueTotal": 49,
}
`;

exports[`util calcCharacterStat ru_meng_ling 1`] = `
Object {
  "blankTotal": 7,
  "details": Array [
    Object {
      "blank": false,
      "char": "，",
      "count": 7,
      "punctuation": true,
    },
    Object {
      "blank": false,
      "char": "。",
      "count": 6,
      "punctuation": true,
    },
    Object {
      "blank": true,
      "char": "
",
      "count": 5,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "知",
      "count": 3,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "#",
      "count": 2,
      "punctuation": true,
    },
    Object {
      "blank": true,
      "char": " ",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "如",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "梦",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "令",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "·",
      "count": 2,
      "punctuation": true,
    },
  ],
  "punctuationTotal": 18,
  "total": 109,
  "uniqueBlankTotal": 2,
  "uniquePunctuationTotal": 5,
  "uniqueTotal": 70,
}
`;

exports[`util calcCharacterStat ru_meng_ling 2`] = `
Object {
  "blankTotal": 7,
  "details": Array [
    Object {
      "blank": false,
      "char": "知",
      "count": 3,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "如",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "梦",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "令",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "常",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "记",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "溪",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "亭",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "日",
      "count": 2,
      "punctuation": false,
    },
    Object {
      "blank": false,
      "char": "暮",
      "count": 2,
      "punctuation": false,
    },
  ],
  "punctuationTotal": 18,
  "total": 109,
  "uniqueBlankTotal": 2,
  "uniquePunctuationTotal": 5,
  "uniqueTotal": 70,
}
`;

exports[`util formatCharacterStat chou_nu_er 1`] = `
"======================================================
                   total: 76
             blank total:  7
       punctuation total: 12
            unique total: 49
      unique blank total:  1
unique punctuation total:  6
                 details:
                 ---------------
                    \\"\\\\n\\":  7
                     \\"，\\":  4
                     \\"。\\":  4
                     \\"愁\\":  3
                     \\"说\\":  3
                     \\"道\\":  2
                     \\"识\\":  2
                     \\"滋\\":  2
                     \\"味\\":  2
                     \\"爱\\":  2
"
`;

exports[`util formatCharacterStat chou_nu_er 2`] = `
"======================================================
                   total: 76
             blank total:  7
       punctuation total: 12
            unique total: 49
      unique blank total:  1
unique punctuation total:  6
                 details:
                 ---------------
                     \\"愁\\":  3
                     \\"说\\":  3
                     \\"道\\":  2
                     \\"识\\":  2
                     \\"滋\\":  2
                     \\"味\\":  2
                     \\"爱\\":  2
                     \\"上\\":  2
                     \\"层\\":  2
                     \\"楼\\":  2
"
`;

exports[`util formatCharacterStat ru_meng_ling 1`] = `
"======================================================
                   total: 109
             blank total:   7
       punctuation total:  18
            unique total:  70
      unique blank total:   2
unique punctuation total:   5
                 details:
                 ----------------
                     \\"，\\":   7
                     \\"。\\":   6
                    \\"\\\\n\\":   5
                     \\"知\\":   3
                     \\"#\\":   2
                     \\" \\":   2
                     \\"如\\":   2
                     \\"梦\\":   2
                     \\"令\\":   2
                     \\"·\\":   2
"
`;

exports[`util formatCharacterStat ru_meng_ling 2`] = `
"======================================================
                   total: 109
             blank total:   7
       punctuation total:  18
            unique total:  70
      unique blank total:   2
unique punctuation total:   5
                 details:
                 ----------------
                     \\"知\\":   3
                     \\"如\\":   2
                     \\"梦\\":   2
                     \\"令\\":   2
                     \\"常\\":   2
                     \\"记\\":   2
                     \\"溪\\":   2
                     \\"亭\\":   2
                     \\"日\\":   2
                     \\"暮\\":   2
"
`;
